objects/CS_LG01_Start_Enrollment_Email_Footer__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>to store Brokerage Enrollment email template footer based on associated Account Situs Code and Brand</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_1st_line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer 1st line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Footer_part_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer part 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Footer_part_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer part 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CS_LG01 Start Enrollment Email Footer</label>
</CustomObject>